added all entities. and tests.
